Mac OS X - Audio / Video Effects presets
This ticket is split off from:
https://trac.videolan.org/vlc/ticket/7336
An overall custom preset system that saves all the settings of each panel (Basic, Crop, Geometry, Color, Miscellaneous) of the Video Effects window into a user defined preset name would be nice.
To avoid existing preference file conflicts, perhaps the settings could be saved as an individual text file per saved preset that resides in a Video Presets folder in the VLC preferences folder. This way the presets could survive through preference resets and potentially be made cross platform so people could move their presets from one computer to another by copying their preset files. VLC would auto-detect based on the files found in the folder to populate the Preset menu (see attachment).
If adjustments are made while a preset is selected, the preset menu immediately changes to "Custom Setting" since it no longer matches the previously selected preset. This works like many preset/custom interfaces. Then the user could click Save to open a VLC dialog window where they could name their preset. (maybe even provide a button here and in the VLC preferences to open the presets folder in the Finder so people could be aware of copy/moving preset files).
Permanent VLC-defined presets could also exist such as a default for resetting all values to VLC's defaults and any other recommended preset configurations by VLC.
This would allow people, as you know, to save a variety of configurations for their common video playback needs and provide an easy way to revert to defaults or other VLC presets.
The same kind of system with an Audio Presets folder could be created as well.
Clarification:
My thought is instead of getting into having a preset just for the EQ, or just for something like Volume Normalization and having a bunch of different presets configs, just have one encompassing preset system for Audio Effects and one for Video Effects. So an audio preset would save the current state of the EQ, Compressor, Spatializer and Filter all in one group. Same for Video Effects where it saves the settings in that window. Then the preset selection would stay at the top as you move from panel to panel within the effects window.