macosx: added a profile management system to the video effects (refs #7342)

This way, you can keep multiple sets of filters with their respective values and switch on-the-fly